tests/ui-msrv/transmute-illegal-lifetime.stderr
error[E0597]: `x` does not live long enough
  --> tests/ui-msrv/transmute-illegal-lifetime.rs:12:52
   |
12 |     let _: &'static u64 = zerocopy::transmute_ref!(&x);
   |            ------------                            ^^ borrowed value does not live long enough
   |            |
   |            type annotation requires that `x` is borrowed for `'static`
13 | }
   | - `x` dropped here while still borrowed
